--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,5 +10,11 @@
         {
             "path": "../interface"
         }
-    ]
+    ],
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["./src/*"]
+        }
+    }
 }
