--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@platejs/basic-nodes": "^49.0.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-toolbar": "^1.1.11",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-standard-features": "^1.2.0",
     "@solana/wallet-standard-util": "^1.1.1",
     "@solana/web3.js": "^1.95.2",
+    "@tailwindcss/vite": "^4.1.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "highlight.js": "^11.10.0",
+    "lucide-react": "^0.542.0",
+    "platejs": "^49.2.12",
     "qs": "^6.12.3",
     "quill": "^2.0.2",
     "quill-delta": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
     "@blog/interface": "link:../interface",
@@ -38,6 +51,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "list": "link:@types/editorjs/list",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5.2.2",
     "vite": "^5.3.1",
     "vite-plugin-node-polyfills": "^0.22.0"
