--- a/dockerfile.frontend
+++ b/dockerfile.frontend
@@ -1,27 +1,36 @@
 # 1. 베이스 이미지 설정
 FROM node:20-alpine
+ARG VITE_BACKEND_BASE_URL
+ENV VITE_BACKEND_BASE_URL=$VITE_BACKEND_BASE_URL
+ENV CI=true
 
 # 2. 작업 디렉토리 설정
 WORKDIR /home/node/app
 
-# 3. 필요한 파일 복사
-COPY frontend ./frontend
-COPY interface ./interface
+
+# 3. 의존성 파일만 먼저 복사
+COPY frontend/package.json frontend/pnpm-lock.yaml ./frontend/
+COPY interface/package.json interface/pnpm-lock.yaml ./interface/
 
 # 4. Corepack 활성화 (Pnpm 지원)
-RUN corepack enable
+RUN npm install -g pnpm
+
 
 # 5. 의존성 설치 (백엔드)
 WORKDIR /home/node/app/frontend
-RUN pnpm install --frozen-lockfile && pnpm prisma generate
+RUN pnpm install --frozen-lockfile
+
 
 # 6. 의존성 설치 (프론트엔드)
 WORKDIR /home/node/app/interface
 RUN pnpm install --frozen-lockfile
 
-# 7. 백엔드 빌드
+
+# 7. 소스 전체 복사
+WORKDIR /home/node/app
+COPY frontend ./frontend
+COPY interface ./interface
+
+# 8. 백엔드 빌드
 WORKDIR /home/node/app/frontend
 RUN pnpm build
-
-# 8. 실행 명령 설정
-CMD ["node", "dist/main.js"]
